ghc/compiler/tests/typecheck/should_fail/tcfail058.hs
module ShouldFail where

--!!! inadvertently using => instead of ->

f :: (Array a) => a -> b
f x = x
